# umo

./: Cargo.toml  README.md  design-note.md  development.md  package.json  tsconfig.json
configs/: tsconfig.base.json  tsconfig.main.json
docs/: README.ja.md  README.md
examples/: add.umo  hello.umo  sum.umo
src/: .babelrc.js  ast.rs  ast_lowering.rs  ast_typecheck.rs  cctx.rs  compiler.test.ts  compiler.ts  eval.rs  eval_.rs  lib.rs  main.rs  ntype.rs  option_once_cell.rs  parser.rs  parser.test.ts  parser.ts  parsing.rs  rt_ctx.rs  sir.rs  sir_compile.rs  sir_eval.rs  sir_typecheck.rs  sir_validation.rs  testing.rs  typeck.test.ts  typeck.ts  util.rs  vm_v1.rs
src/__testcases__/case1/: config.json  output.js
src/__testcases__/expr2/: output.js
src/__testcases__/expr3/: input.umo  output.js
src/__testcases__/expr4/: input.umo  output.js
src/__testcases__/expr5/: input.umo  output.js
src/__testcases__/expr6/: input.umo  output.js
src/__testcases__/floating-point1/: input.umo  output.js
src/__testcases__/parse-error1/: error.txt
src/__testcases__/parse-error2/: config.json  error.txt  input.umo
src/__testcases__/parse-error3/: error.txt  input.umo
src/__testcases__/parse-error4/: error.txt  input.umo
src/__testcases__/stmt1/: input.umo  output.js
src/__testcases__/stmt2/: config.json  input.umo  output.js
src/__testcases__/stmt3/: input.umo  output.js
src/__testcases__/typeck1/: config.json  error.txt  input.umo
src/old/: eval.rs  mod.rs  parsing.rs
src/util/: debug_utils.rs
tests/: run_add.rs  run_hello.rs  run_sum.rs
(+2 files in other folders)
