[package]
name = "umo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
clap = { version = "4.3.19", features = ["derive"] }
option-cell = "0.1.0"
thiserror = "1.0.48"

[dev-dependencies]
pretty_assertions = "1.4.0"
